syntax = "proto3";

package org.brewchain.mcore.model;

message ChainKeyList {
	map<string, ChainKey> chainKeys = 1;
}

message ChainKey {
	string version = 1;
	bytes publicKey = 2;
	bytes privateKey = 3;
}